--- a/week-three/ajax3.html
+++ b/week-three/ajax3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="tyyli3.css">
+    <link rel="stylesheet" href="style.css">
     <nav>
         <p id="hakuteksti"><strong>Hae tästä leffan nimi</strong></p>
         <input id = "haku" placeholder="Search..">
@@ -12,6 +12,6 @@
 </head>
 <body>
 
-<script src="vaihe3.js"></script>
+<script src="javascript.js"></script>
 </body>
 </html>
